# shiori-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: add.rs  bookmarks.rs  login.rs  logout.rs  main.rs  tags.rs  validate.rs
src/structs/: mod.rs  shiori_api.rs  shiori_cli.rs
