[package]
name = "shiori-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requestty = "0.5.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde_json = "1.0.107"
url = "2.4.1"
