[package]
name = "shiori-cli"
description = "Manage your Shiori bookmarks conveniently from the CLI"
version = "0.1.1"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
disk-persist = "0.1.0"
requestty = "0.5.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
url = "2.4.1"
